# opencv-samples-perf-analysis

./: CMakeLists.txt  README.md  bow_svm.cpp
bow_svm/: BaseReader.h  CMakeLists.txt  CifarReader.cpp  CifarReader.h  bow_svm.cpp
data/bow_svm/: svm.xml
erosion/: CMakeLists.txt  erosion.cpp
filter/: CMakeLists.txt  README.md  filter.cpp  kernel.txt  main.cpp
filter/filter/: Filter.cpp  Filter.h  main.cpp
nn/: CMakeLists.txt  README.md  nn.cpp  utils.cpp  utils.h
reader/: BaseReader.h  CifarReader.cpp  CifarReader.h
resize/: CMakeLists.txt  README.md  resize.cpp
scripts/: README.md  multi_run.pl
scripts/check_correctness/: execute_accuracy_svm.py  execute_diff_erosion.py  execute_diff_filter2d.py  execute_diff_resize.py
scripts/execute_bowsvm/: execute_bowsvm_inference_licheepi.sh  execute_bowsvm_inference_mangopi.sh  execute_bowsvm_inference_x86.sh  execute_bowsvm_train_x86.sh
scripts/execute_erosion/: execute_erosion_licheepi.sh  execute_erosion_mango.sh  execute_erosion_x86.sh
scripts/execute_filter/: execute_filter2d_licheepi.sh  execute_filter2d_mangopi.sh  execute_filter2d_x86.sh
scripts/execute_nn_inference/: execute_nn_inference_licheepi.sh  execute_nn_inference_mangopi.sh  execute_nn_inference_x86.sh
scripts/execute_resize/: execute_resize_licheepi.sh  execute_resize_mangopi.sh  execute_resize_x86.sh
scripts/select_metrics/: select_data_bow_svm.py  select_data_erosion.py  select_data_filter.py  select_data_nn.py  select_data_resize.py
test_model/: vocabulary.yml
utils/: CMakeLists.txt  check_accuracy.cpp  check_nn_accuracy.cpp  check_svm_accuracy.cpp  diff_images.cpp
